# isaac-fighter

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  design.md  rewards.md  self_play.md  unitree_g1_config_notes.md
scripts/skrl/: evaluate_tournament.py  play.py  train.py
scripts/tools/: export_amp_rollout_features.py  list_fight_tasks.py  locomotion_bootstrap.py  record_replay.py  run_league_cycle.py  summarize_fight_progress.py  sync_policy_pool.py  train_amp_discriminator.py
source/isaac_fight/: setup.py
source/isaac_fight/config/: extension.toml
source/isaac_fight/isaac_fight/: __init__.py
source/isaac_fight/isaac_fight/assets/: __init__.py
source/isaac_fight/isaac_fight/assets/robots/: __init__.py  unitree.py
source/isaac_fight/isaac_fight/locomotion_bootstrap/: __init__.py  core.py
source/isaac_fight/isaac_fight/motion_prior/: __init__.py  amp.py
source/isaac_fight/isaac_fight/tasks/: __init__.py
source/isaac_fight/isaac_fight/tasks/direct/: __init__.py
source/isaac_fight/isaac_fight/tasks/direct/unitree_1v1/: __init__.py  contact_filters.py  elo.py  fight_common.py  fight_rules.py  fighter_ids.py  observations.py  opponent_pool.py  replay.py  reward_terms.py  self_play.py  stats.py  unitree_1v1_env.py  (+1 more)
source/isaac_fight/isaac_fight/utils/: __init__.py  importers.py  paths.py  torch_math.py
tests/: conftest.py  test_contact_filters.py  test_elo.py  test_locomotion_bootstrap.py  test_opponent_pool.py  test_replay_schema.py  test_self_play_wrapper.py  test_static_contract.py  test_unitree_specs.py
(+2 files in other folders)
